--- a/index.html
+++ b/index.html
@@ -4,50 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alvaro Guerra | Engineering Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Alvaro Guerra</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                </ul>
-            </div>
+
+    <!-- Header Section -->
+    <header>
+        <div class="logo-name">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <h1>Alvaro Guerra</h1>
         </div>
-    </nav>
-
-    <div class="container mt-5">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Mechanical Engineer with expertise in CAD, FEA, software development, and more.</p>
-        </section>
-        
-        <section id="resume" class="mt-5">
-            <h2>Resume</h2>
-            <p><a href="resume.pdf" target="_blank">Download My Resume (PDF)</a></p>
-        </section>
-        
-        <section id="projects" class="mt-5">
-            <h2>Projects</h2>
+        <nav>
             <ul>
-                <li><a href="projects/cad.html">CAD</a></li>
-                <li><a href="projects/fea.html">FEA</a></li>
-                <li><a href="projects/software.html">Software</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="https://github.com/AlvaroGuerra" target="_blank">Github</a></li>
+                <li><a href="https://youtube.com/" target="_blank">Youtube</a></li>
             </ul>
-        </section>
-    </div>
+        </nav>
+    </header>
 
-    <footer class="text-center mt-5 py-3 bg-dark text-light">
-        <p>&copy; 2025 Alvaro Guerra. All rights reserved.</p>
-    </footer>
+    <!-- Projects Section -->
+    <section class="projects">
+        <div class="project-card">
+            <img src="images/project1.jpg" alt="Project 1">
+            <h2>Project Title 1</h2>
+            <p>Short description of the project.</p>
+            <a href="projects/cad.html">Read More</a>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="project-card">
+            <img src="images/project2.jpg" alt="Project 2">
+            <h2>Project Title 2</h2>
+            <p>Short description of the project.</p>
+            <a href="projects/fea.html">Read More</a>
+        </div>
+
+        <!-- Add more project cards as needed -->
+    </section>
+
 </body>
 </html>
