--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo-name">
-            <img src="images/logo.png" alt="Logo" class="logo">
+            <img src="./images/logo.png" alt="Logo" class="logo">
             <h1>Alvaro Guerra</h1>
         </div>
         <nav>
