--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="resume.pdf">Resume</a></li>
+                <li><a href="files/AlvGue_Resume.pdf">Resume</a></li>
                 <li><a href="https://github.com/AlvaroGuerra" target="_blank">Github</a></li>
                 <li><a href="https://youtube.com/" target="_blank">Youtube</a></li>
             </ul>
