--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     <!-- Projects Section -->
     <section class="projects">
+
         <div class="project-card">
-            <img src="images/project1.jpg" alt="Project 1">
-            <h2>Project Title 1</h2>
-            <p>Short description of the project.</p>
+            <img src="images/ignitorsrocket.png" alt="Rocketry">
+            <h2>IGNITORS Rocketry</h2>
+            <p>Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</p>
             <a href="projects/cad.html">Read More</a>
         </div>
 
@@ -41,6 +42,7 @@
         </div>
 
         <!-- Add more project cards as needed -->
+
     </section>
 
 </body>
