--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
             <h1>Alvaro Guerra</h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="about.html">About<a></li>
-                <li><a href="files/AlvGue_Resume.pdf">Resume<a></li>
-                <li><a href=" https://github.com/Agu303" target="_blank">Github<a></li>
-                <li><a href="https://youtube.com/" target="_blank">Youtube<a></li>
-            </ul>
+            <a href="about.html">About</a>
+            <a href="files/AlvGue_Resume.pdf">Resume</a>
+            <a href="https://github.com/Agu303" target="_blank">Github</a>
+            <a href="https://youtube.com/" target="_blank">Youtube</a>
         </nav>
     </header>
 
