--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Alvaro Guerra</h1>
         </div>
         <nav>
-            <a href="about.html">About</a>
+            <a href="projects/about.html">About</a>
             <a href="files/AlvGue_Resume.pdf">Resume</a>
             <a href="https://github.com/Agu303" target="_blank">Github</a>
             <a href="https://youtube.com/" target="_blank">Youtube</a>
