--- a/projects/software.html
+++ b/projects/software.html
@@ -18,7 +18,7 @@
     </header>
 
     <section>
-        <h2>My FEA Work</h2>
+        <h2>My coding stuff</h2>
         <p>Here, I'll showcase my coding projects.</p>
     </section>
 </body>
