--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="project-card">
             <img src="images/gcr.jpg" alt="GCR">
             <h2>Garden Robot</h2>
-            <p>Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</p>
+            <p>Modular robotic system capable of performing fertilizing and watering informed by sensor data collection and analysis.  This robot was designed to tread a long a 50-foot garden row with the goal of reducing physical strain associated with gardening maintenace through remote control.</p>
             <a href="projects/gcr.html">Read More</a>
         </div>
 
