--- a/index.html
+++ b/index.html
@@ -48,6 +48,48 @@
             <a href="projects/gcr.html">Read More</a>
         </div>
 
+        <div class="project-card">
+            <img src="images/oL-logo.svg" alt="oL">
+            <h2>openLayup</h2>
+            <p>openLayup is an open-source, GUI-based structural simulation tool for aerospace structures. The software estimates key mechanical metrics such as stress, strain, and factor of safety based on material properties, ply layup configurations, and component geometries. It applies Classical Laminate Theory (CLT) and the Tsai-Wu failure criterion, enabling laminate-level failure-mode analysis across various aerospace components.</p>
+            <a href="projects/openLayup.html">Read More</a>
+            <a href="https://github.com/Agu303/openLayup" target="_blank">Github Repo</a>
+        </div>
+
+        <div class="project-card">
+            <img src="images/beam.png.jpg" alt="Beam">
+            <h2>BeamMeUpScotty</h2>
+            <p>2D structural analysis for trusses, beams, or frames.  Solves static equilibrium equations and matrices, visualizes structures/force diagrams/SF & BM graphs.</p>
+            <a href="https://github.com/Agu303/BeamMeUpScotty" target="_blank">Github Repo</a>
+        </div>
+
+        <div class="project-card">
+            <img src="images/music.jpg" alt="midi">
+            <h2>MIDIxMachina</h2>
+            <p>Software project designed to transform MIDI audio files from my DGX-650 keyboard.  The software takes in .midi files as input and processes them with different algorithms to produce interesting sounds and visual patterns.</p>
+            <a href="https://github.com/Agu303/MIDIxMachina" target="_blank">Github Repo</a>
+        </div>
+
+        <div class="project-card">
+            <img src="images/blackhole.jpg" alt="astro">
+            <h2>C++ Astrophysics project</h2>
+            <p>Work in progress...</p>
+        </div>
+
+        <div class="project-card">
+            <img src="images/bitcoinprice.png" alt="MLbitcoin">
+            <h2>ML Methods for Engineering Data Analysis</h2>
+            <p>I took TAMU's MEEN 423 machining learning class in the spring of 2025.  I copmleted two projects for the class that utilized macine learning techniques to analyze complex datasets.  One was evaluating stess-strain relationships and one in financial time-series analysis.   </p>
+            <a href="projects/meen423.html">Read More</a>
+            <a href="https://github.com/Agu303/MEEN423_AG" target="_blank">Github Repo</a>
+        </div>
+
+        <div class="project-card">
+            <img src="images/pcb.jpg" alt="pcb">
+            <h2>Flight Computer</h2>
+            <p>wat dis gonna do?</p> 
+        </div>
+
         <!-- Add more project cards as needed -->
 
     </section>
