--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="project-card">
-            <img src="images/music.jpg" alt="midi">
+            <img src="images/mm-logo.png" alt="midi">
             <h2>MIDIxMachina</h2>
             <p>Software project designed to transform MIDI audio files from my DGX-650 keyboard.  The software takes in .midi files as input and processes them with different algorithms to produce interesting sounds and visual patterns.</p>
             <a href="https://github.com/Agu303/MIDIxMachina" target="_blank">Github Repo</a>
