--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <div class="project-card">
             <img src="images/ignitorsrocket.png" alt="Rocketry">
-            <h2>IGNITORS Rocketry</h2>
-            <p>Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</p>
+            <h2>Rocketry</h2>
+            <p> I've become very interested in rocketry since my freshman year.  Since then I have worked on contructing rockets and analysis tools to for competition and L-certification launches.</p>
             <a href="projects/ignitors.html">Read More</a>
         </div>
 
