--- a/projects/ignitors.html
+++ b/projects/ignitors.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>IGNITORS</h1>
+        <h2> Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h2>
         <nav>
             <a href="../index.html">Home</a> |
             <a href="../about.html">About</a> |
