--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2 style="color: #ffffff;">IGNITORS</h2>
-        <h3 style="color: #ffffff;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h3>
+        <h3 style="color: #ffffff; text-align: left;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h3>
         <p style="color: #ffffff;">As the Structures Lead for the 2024-2025 IGNITORS team, I am leading the structural development of a 10K COTS rocket featuring a student-developed design with a hybrid propulsion system. 
              Despite the team being founded in November, we have rapidly progressed in designing a prototype, securing sponsorships, and actively sourcing materials for our upcoming test launch at
               the IREC competition this June.</p>
