--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -30,7 +30,7 @@
                sourced for our design.  Future iterations will use an in-house prepreg layup process to achieve tailored mechanical properties.  Fins and bulkheads consist of G10 Fiberglass laminates 
                that are CNC machined with a Water Jet cutter.  Centering rings are 3D printed with PETG filament.  Structural bonding is done with West Systems 105 epoxy/206 hardener and coupler tubes.  </p>
         <img src="../images/rocket_cad.png" alt="r_cad" style="display: block; margin: 0 auto; max-width: 1100px; height: auto;">
-        <p style="color: #ffffff;"> As one of the founding member of the Texas A&M IGNITORS Rocketry Team, I led the structural subsystem by establishing the design pipeline and assembly procedures for our launch vehicle.
+        <p style="color: #ffffff;"> As one of the founding members of the Texas A&M IGNITORS Rocketry Team, I led the structural subsystem by establishing the design pipeline and assembly procedures for our launch vehicle.
              I trained team members in CAD (SolidWorks), finite element analysis (ANSYS), and composite material modeling. This included instruction on Classical Lamination Theory (CLT), the Tsai-Wu failure
               criterion, and additional failure frameworks used to predict laminate behavior under multiaxial loading. My contributions enabled the team to develop robust composite structures and laid the groundwork
                for future design standardization and performance validation.</p>
