--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img src="images/ignitorsrocket.png" alt="Rocketry">
             <h2>Rocketry</h2>
             <p> I've become very interested in rocketry since my freshman year.  Since then I have worked on contructing rockets and analysis tools to for competition and L-certification launches.</p>
+            <a href="https://www.soundingrocket.org/">IREC Page</a>
             <a href="projects/rocketry.html">Read More</a>
         </div>
 
