--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <a href="projects/about.html">About</a>
-            <a href="files/AlvGue_Resume.pdf">Resume</a>
+            <a href="files/Resume.pdf">Resume</a>
             <a href="https://github.com/Agu303" target="_blank">Github</a>
             <a href="https://youtube.com/" target="_blank">Youtube</a>
         </nav>
