--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon.ico" sizes="32x32">
     <title>Alvaro Guerra | Engineering Portfolio</title>
+    <!-- Add the Computer Modern font link here, before your own stylesheet -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
