--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         </nav>
     </header>
 
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Alvaro Guerra</h1>
+        <p>Projects and Design Portfolio</p>
+    </section>
+
     <!-- Projects Section -->
     <section class="projects">
 
