--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
     <!-- Header Section -->
     <header>
-        <div class="logo-name">
-            <img src="./images/logo.png" alt="Logo" class="logo">
-            <h1>Alvaro Guerra</h1>
-        </div>
+        <a href="index.html" class="logo-link">
+            <div class="logo-name">
+                <img src="./images/logo.png" alt="Logo" class="logo">
+                <h1>Alvaro Guerra</h1>
+            </div>
+        </a>
         <nav>
             <a href="projects/about.html">About</a>
             <a href="files/Resume.pdf">Resume</a>
