--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Header Section -->
-    <header>
+    <header class="index-header">
         <a href="index.html" class="logo-link">
             <div class="logo-name">
                 <img src="./images/logo.png" alt="Logo" class="logo">
