--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html" class="logo-link">
             <div class="logo-name">
                 <img src="./images/logo.png" alt="Logo" class="logo">
-                <h1>Alvaro Guerra</h1>
+                <h2>Engineering Portfolio | Alvaro Guerra</h2>
             </div>
         </a>
         <nav>
@@ -25,6 +25,11 @@
             <a href="https://github.com/Agu303" target="_blank">Github</a>
             <a href="https://youtube.com/" target="_blank">Youtube</a>
         </nav>
+        <div class="header-text">
+            <h1 class="header-name">Alvaro Guerra</h1>
+            <div class="header-line"></div>
+            <h1 class="header-title">Project and Design Portfolio</h1>
+        </div>
     </header>
 
     <!-- Projects Section -->
