--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,15 @@
     <title>Projects | Alvaro Guerra</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Projects</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="resume.html">Resume</a> |
-            <a href="projects.html">Projects</a>
+            <a href="projects/about.html">About</a>
+            <a href="files/Resume.pdf">Resume</a>
+            <a href="https://github.com/Agu303" target="_blank">Github</a>
+            <a href="https://youtube.com/" target="_blank">Youtube</a>
         </nav>
     </header>
 
