--- a/projects/about.html
+++ b/projects/about.html
@@ -9,13 +9,15 @@
 <body>
     <!-- Header Section -->
     <header>
-        <div class="logo-name">
-            <img src="../images/logo.png" alt="Logo" class="logo">
-            <h1>Alvaro Guerra</h1>
-        </div>
+        <a href="index.html" class="logo-link">
+            <div class="logo-name">
+                <img src="./images/logo.png" alt="Logo" class="logo">
+                <h1>Alvaro Guerra</h1>
+            </div>
+        </a>
         <nav>
             <a href="../index.html">Home</a>
-            <a href="../files/AlvGue_Resume.pdf">Resume</a>
+            <a href="files/Resume.pdf">Resume</a>
             <a href="https://github.com/Agu303" target="_blank">Github</a>
             <a href="https://youtube.com/" target="_blank">Youtube</a>
         </nav>
