--- a/projects/about.html
+++ b/projects/about.html
@@ -11,7 +11,7 @@
     <header>
         <a href="index.html" class="logo-link">
             <div class="logo-name">
-                <img src="./images/logo.png" alt="Logo" class="logo">
+                <img src="../images/logo.png" alt="Logo" class="logo">
                 <h2>Engineering Portfolio | Alvaro Guerra</h2>
             </div>
         </a>
