--- a/projects/about.html
+++ b/projects/about.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <a href="./index.html" class="logo-link">
+        <a href="../index.html" class="logo-link">
             <div class="logo-name">
                 <img src="../images/logo.png" alt="Logo" class="logo">
                 <h2>Engineering Portfolio | Alvaro Guerra</h2>
