--- a/projects/about.html
+++ b/projects/about.html
@@ -12,7 +12,7 @@
         <a href="../index.html" class="logo-link">
             <div class="logo-name">
                 <img src="../images/logo.png" alt="Logo" class="logo">
-                <h2>Engineering Portfolio | Alvaro Guerra</h2>
+                <h2>Engineering Portfolio</h2>
             </div>
         </a>
         <nav>
