--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Rocketry</h1>
+        <a href="../index.html" class="logo-link">
+            <div class="logo-name">
+                <img src="../images/logo.png" alt="Logo" class="logo">
+                <h2>Engineering Portfolio</h2>
+            </div>
+        </a>
         <nav>
             <a href="../index.html">Home</a> |
             <a href="../about.html">About</a> |
@@ -18,6 +23,7 @@
     </header>
 
     <section>
+        <h1 style = "color: #ffffff">Rocketry</h1>
         <h2 style="color: #ffffff;">IGNITORS</h2>
         <h3 style="color: #ffffff; text-align: center;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h3>
         <p style="color: #ffffff;">As the Structures Lead for the 2024-2025 IGNITORS team, I am leading the structural development of a 10K COTS rocket featuring a student-developed design with a hybrid propulsion system. 
