--- a/projects/software.html
+++ b/projects/software.html
@@ -8,16 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>Software Projects</h1>
-        <nav>
-            <a href="../index.html">Home</a> |
-            <a href="../about.html">About</a> |
-            <a href="../resume.html">Resume</a> |
-            <a href="../projects.html">Projects</a>
-        </nav>
-    </header>
+        <header>
+            <a href="../index.html" class="logo-link">
+                <div class="logo-name">
+                    <img src="../images/logo.png" alt="Logo" class="logo">
+                    <h2>Engineering Portfolio</h2>
+                </div>
+            </a>
+            <nav>
+                <a href="../index.html">Home</a> |
+                <a href="../about.html">About</a> |
+                <a href="../resume.html">Resume</a> |
+                <a href="../projects.html">Projects</a>
+            </nav>
+        </header>
 
     <section>
+        <h1 style = "color: #ffffff">Software Projects</h1>
         <h2>My coding stuff</h2>
         <p>Here, I'll showcase my coding projects.</p>
     </section>
