--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <h1 style = "color: #ffffff">Garden Robot</h2>
+        <h1 style="color: #ffffff; text-align: center;">Garden Robot</h2>
         <p>...</p>
     </section>
 </body>
