--- a/projects/openLayup.html
+++ b/projects/openLayup.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <h1 style = "color: #ffffff">openLayup</h1>
+        <h1 style="color: #ffffff; text-align: center;">openLayup</h1>
         <h2>My Work</h2>
         <p>...</p>
     </section>
