--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <h1 style = "color: #ffffff">Rocketry</h1>
+        <h1 style="color: #ffffff; text-align: center;">Rocketry</h1>
         <h2 style="color: #ffffff;">IGNITORS</h2>
         <h3 style="color: #ffffff; text-align: center;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h3>
         <p style="color: #ffffff;">As the Structures Lead for the 2024-2025 IGNITORS team, I am leading the structural development of a 10K COTS rocket featuring a student-developed design with a hybrid propulsion system. 
