--- a/projects/sae.html
+++ b/projects/sae.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <h1 style = "color: #ffffff">SAE Aero Design Competition</h1>
+        <h1 style="color: #ffffff; text-align: center;">SAE Aero Design Competition</h1>
         <h2>My Work</h2>
         <p>...</p>
     </section>
