--- a/projects/software.html
+++ b/projects/software.html
@@ -24,7 +24,7 @@
         </header>
 
     <section>
-        <h1 style = "color: #ffffff">Software Projects</h1>
+        <h1 style="color: #ffffff; text-align: center;">Software Projects</h1>
         <h2>My coding stuff</h2>
         <p>Here, I'll showcase my coding projects.</p>
     </section>
