--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -11,9 +11,9 @@
         <h1>Garden Robot</h1>
         <nav>
             <a href="../index.html">Home</a> |
-            <a href="../about.html">About</a> |
-            <a href="../resume.html">Resume</a> |
-            <a href="../projects.html">Projects</a>
+            <a href="about.html">About</a> |
+            <a href="../files/Resume.pdf">Resume</a> |
+            <a href="../index.html">Projects</a>
         </nav>
     </header>
 
