--- a/projects/about.html
+++ b/projects/about.html
@@ -9,10 +9,10 @@
 <body>
     <!-- Header Section -->
     <header>
-        <a href="index.html" class="logo-link">
+        <a href="../index.html" class="logo-link">
             <div class="logo-name">
-                <img src="./images/logo.png" alt="Logo" class="logo">
-                <h1>Alvaro Guerra</h1>
+                <img src="../images/logo.png" alt="Logo" class="logo">
+                <h2>Engineering Portfolio</h2>
             </div>
         </a>
         <nav>
