--- a/projects/openLayup.html
+++ b/projects/openLayup.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>openLayup</h1>
+        <a href="../index.html" class="logo-link">
+            <div class="logo-name">
+                <img src="../images/logo.png" alt="Logo" class="logo">
+                <h2>Engineering Portfolio</h2>
+            </div>
+        </a>
         <nav>
             <a href="../index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -18,6 +23,7 @@
     </header>
 
     <section>
+        <h1 style="color: #ffffff; text-align: center;">openLayup</h1>
         <h2>My Work</h2>
         <p>...</p>
     </section>
