--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -23,8 +23,10 @@
     </header>
 
     <section>
-        <h1 style="color: #ffffff; text-align: center;">Garden Robot</h2>
+        <div class = "centered-content" 
+        <h1 style="color: #ffffff; text-align: center;">Garden Robot</h1>
         <p>...</p>
+        </div>
     </section>
 </body>
 </html>
