--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -23,6 +23,7 @@
     </header>
 
     <section>
+        <div class = "centered-content">
         <h1 style="color: #ffffff; text-align: center;">Rocketry</h1>
         <h2 style="color: #ffffff;">IGNITORS</h2>
         <h3 style="color: #ffffff; text-align: center;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets at SOMTECH.</h3>
@@ -41,6 +42,7 @@
               criterion, and additional failure frameworks used to predict laminate behavior under multiaxial loading. My contributions enabled the team to develop robust composite structures and laid the groundwork
                for future design standardization and performance validation.</p>
         <img src="../images/struct_workflow.png" alt="wrkf" style="display: block; margin: 0 auto; max-width: 1100px; height: auto;"> 
+        </div>
     </section>
 </body>
 </html>
