--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <!-- ─────────── HEADER ─────────── -->
     <header>
         <a href="../index.html" class="logo-link">
             <div class="logo-name">
@@ -25,16 +24,119 @@
 
     <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
+        <!-- TITLE BLOCK -->
+        <div class = "centered-content">
+        <h1 style="color: #ffffff; text-align: center;">Rocketry</h1>
+        <h2 style="color: #ffffff; text-align: center";>IGNITOR</h2>
+        <h3 style="color: #ffffff; text-align: center;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets – Texas A&amp;M University</h3>
+        <br>
+        
+        <!-- OVERVIEW -->
+        <p style="color: #ffffff;">As founding <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
+            <strong>10 k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
+            Engineering Competition (<abbr title="International Rocket Engineering Competition">IREC</abbr>) in June 2025.
+            Since forming the team in November 2024 we have delivered a flight‑ready prototype, secured sponsorships,
+            and sourced manufacturing partners &nbsp;— all on track for our first launch campaign.
+        </p>
+
+        <!-- ROLE & SCOPE -->
+        <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
+        <ul style="color:#ffffff;">
+            <li><strong>Lead a 12‑person sub‑team</strong> through requirements, CAD, FEA, manufacturing, and QA.</li>
+            <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
+            <li>Mentored team in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
+        </ul>
+
+        <br>
+        <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto;">
+        <br>
+
+        <!-- SYSTEM ARCHITECTURE TABLE -->
+        <h3 style="color:#ffffff;">| System Architecture</h3>
+        <div style="overflow-x:auto;">
+        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left;">
+            <thead>
+                <tr>
+                    <th style="border-bottom:1px solid #888;">Sub‑system</th>
+                    <th style="border-bottom:1px solid #888;">Material / Method</th>
+                    <th style="border-bottom:1px solid #888;">Why</th>
+                    <th style="border-bottom:1px solid #888;">Status&nbsp;(May 2025)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Airframe (4″ Ø)</td><td>G12 filament‑wound fiberglass tube</td><td>Radio‑transparent baseline</td><td>Received</td></tr>
+                <tr><td>Nose cone</td><td>3:1 ogive fiberglass + CNC Al tip</td><td>Strength / weight balance</td><td>CDR closed</td></tr>
+                <tr><td>Fins &amp; bulkheads</td><td>Water‑jet‑cut G10 laminates</td><td>High modulus, low CAM‑time</td><td>Ready to machine</td></tr>
+                <tr><td>Centering rings</td><td>PET‑G 3‑D printed (60 % infill)</td><td>Rapid iteration</td><td>Printed / QA</td></tr>
+                <tr><td>Bond‑line</td><td>West System 105/206 epoxy</td><td>Aerospace pedigree</td><td>In stock</td></tr>
+            </tbody>
+        </table>
+        </div>
+
+        <br>      
+        <img src="../images/ork_rocket.png" alt="ORK" style="display: block; margin: 0 auto;">
+        <br>
+
+        <p style="color: #ffffff;"> Using flight simulation software such as OpenRocket, RockSim, and RASAero, we conduct aerodynamic modeling, trajectory prediction, and stability analysis to refine our design. 
+             Our team utilizes Solidworks to design the rocket's airframe, fins, bulkheads, and centering rings to ensure proper integration with propulsion,  avionics, and recovery systems. 
+              FEA is done with ANSYS to perform stress analysis to optimize material distribution and structural integrity.  The rocket's airframe consists of G12 fiberglass composite commercially
+               sourced for our design.  Future iterations will use an in-house prepreg layup process to achieve tailored mechanical properties.  Fins and bulkheads consist of G10 Fiberglass laminates 
+               that are CNC machined with a Water Jet cutter.  Centering rings are 3D printed with PETG filament.  Structural bonding is done with West Systems 105 epoxy/206 hardener and coupler tubes.  </p>
+
+        <br>    
+        <img src="../images/rocket_cad.png" alt="r_cad" style="display: block; margin: 0 auto;">
+        <br>
+
+        <p style="color: #ffffff;"> As one of the founding members of the Texas A&M IGNITORS Rocketry Team, I led the structural subsystem by establishing the design pipeline and assembly procedures for our launch vehicle.
+             I trained team members in CAD (SolidWorks), finite element analysis (ANSYS), and composite material modeling. This included instruction on Classical Lamination Theory (CLT), the Tsai-Wu failure
+              criterion, and additional failure frameworks used to predict laminate behavior under multiaxial loading. My contributions enabled the team to develop robust composite structures and laid the groundwork
+               for future design standardization and performance validation.</p>
+        <br>
+        <img src="../images/struct_workflow.png" alt="wrkf" style="display: block; margin: 0 auto;"> 
+        <br>
+
+        <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
+        </div>
+    </section>
+</body>
+</html>
+
+<!--  
+####################################################################################################
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IGNITORS Projects | Alvaro Guerra</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+
+    <header>
+        <a href="../index.html" class="logo-link">
+            <div class="logo-name">
+                <img src="../images/logo.png" alt="Logo" class="logo">
+                <h2>Engineering Portfolio</h2>
+            </div>
+        </a>
+        <nav>
+            <a href="../index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="../files/Resume.pdf">Resume</a> |
+            <a href="../index.html">Projects</a>
+        </nav>
+    </header>
+
+    <section>
         <div class="centered-content">
 
-            <!-- TITLE BLOCK -->
             <h1 style="color:#ffffff;text-align:center;">Rocketry</h1>
             <h2 style="color:#ffffff;text-align:center;">IGNITORS | Structures Lead (2024‑2025)</h2>
             <h3 style="color:#ffffff;text-align:center;">
                 Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets – Texas A&amp;M University
             </h3>
 
-            <!-- OVERVIEW -->
             <p style="color:#ffffff;">
                 As founding <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
                 <strong>10 k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
@@ -45,7 +147,6 @@
 
             <img src="../images/ork_rocket.png" alt="OpenRocket Simulation" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
 
-            <!-- ROLE & SCOPE -->
             <h3 style="color:#ffffff;">1&nbsp;| My Role &amp; Scope</h3>
             <ul style="color:#ffffff;">
                 <li><strong>Lead a 12‑person sub‑team</strong> through requirements, CAD, FEA, manufacturing, and QA.</li>
@@ -53,7 +154,6 @@
                 <li>Mentor teammates in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
             </ul>
 
-            <!-- SYSTEM ARCHITECTURE TABLE -->
             <h3 style="color:#ffffff;">2&nbsp;| System Architecture</h3>
             <div style="overflow-x:auto;">
             <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left;">
@@ -75,7 +175,6 @@
             </table>
             </div>
 
-            <!-- ANALYSIS & VERIFICATION -->
             <h3 style="color:#ffffff;">3&nbsp;| Analysis &amp; Verification</h3>
             <ul style="color:#ffffff;">
                 <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 10,120 ft AGL @ Mach 0.67
@@ -87,7 +186,6 @@
 
             <img src="../images/rocket_cad.png" alt="Rocket CAD model" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
 
-            <!-- MANUFACTURING PIPELINE -->
             <h3 style="color:#ffffff;">4&nbsp;| Manufacturing Pipeline</h3>
             <ol style="color:#ffffff;">
                 <li>CAD release → automatic DXF / STEP export via SolidWorks PDM.</li>
@@ -98,7 +196,6 @@
 
             <img src="../images/struct_workflow.png" alt="Structural workflow diagram" style="display:block;margin:2rem auto;max-width:640px;width:90%;">
 
-            <!-- TESTING & MILESTONES -->
             <h3 style="color:#ffffff;">5&nbsp;| Integration &amp; Testing Milestones</h3>
             <ul style="color:#ffffff;">
                 <li>Structural Critical Design Review – Jan 2025 (92 / 100&nbsp;ESRA score).</li>
@@ -107,7 +204,6 @@
                 <li>Static fire &amp; Flight Readiness Review – June 2025.</li>
             </ul>
 
-            <!-- IMPACT -->
             <h3 style="color:#ffffff;">6&nbsp;| Impact &amp; Lessons Learned</h3>
             <p style="color:#ffffff;">
                 The composite‑analysis toolbox I built slashed laminate sizing time by 60 %, while our design‑for‑manufacture checklist is now used across propulsion and avionics.  
@@ -123,3 +219,4 @@
     </section>
 </body>
 </html>
+-->
