--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -33,15 +33,15 @@
         
         <!-- OVERVIEW -->
         <p style="color: #ffffff;">As founding <strong>Structures Lead</strong>, I own the end‑to‑end structural development of a
-            <strong>10 k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
+            <strong>10k ft Commercial‑Off‑The‑Shelf hybrid rocket</strong> headed to the International Rocket
             Engineering Competition (<abbr title="International Rocket Engineering Competition">IREC</abbr>) in June 2025.
-            Since forming the team in November 2024 we have delivered a flight‑ready prototype, secured sponsorships,
+            Since team formation in November 2024 we have delivered a flight‑ready prototype, secured sponsorships,
             and sourced manufacturing partners &nbsp;— all on track for our first launch campaign.
         </p>
 
         <!-- ROLE & SCOPE -->
         <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
-        <ul style="color:#ffffff;">
+        <ul style="color:#ffffff; font-size:1.1rem;">
             <li><strong>Lead a 12‑person sub‑team</strong> through requirements, CAD, FEA, manufacturing, and QA.</li>
             <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
             <li>Mentored team in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
@@ -54,7 +54,7 @@
         <!-- SYSTEM ARCHITECTURE TABLE -->
         <h3 style="color:#ffffff;">| System Architecture</h3>
         <div style="overflow-x:auto;">
-        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left;">
+        <table style="width:100%;border-collapse:collapse;color:#ffffff;text-align:left; font-size:1.1rem;">
             <thead>
                 <tr>
                     <th style="border-bottom:1px solid #888;">Sub‑system</th>
