--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -27,7 +27,7 @@
         <!-- TITLE BLOCK -->
         <div class = "centered-content">
         <h1 style="color: #ffffff; text-align: center;">Rocketry</h1>
-        <h2 style="color: #ffffff; text-align: center";>IGNITOR</h2>
+        <h2 style="color: #ffffff; text-align: center";>IGNITORS</h2>
         <h3 style="color: #ffffff; text-align: center;">Interdisciplinary Group for Navigation, Innovation, and Thrust Optimization of Rockets – Texas A&amp;M University</h3>
         <br>
         
