--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -42,13 +42,13 @@
         <!-- ROLE & SCOPE -->
         <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
         <ul style="color:#ffffff; font-size:1.1rem;">
-            <li><strong>Lead a 12‑person sub‑team</strong> through requirements, CAD, FEA, manufacturing, and QA.</li>
+            <li><strong>Led a 12‑person sub‑team</strong> through requirements, CAD, FEA, and manufacturing.</li>
             <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
             <li>Mentored team in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
         </ul>
 
         <br>
-        <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto;">
+        <img src ="../images/rocket_pres.JPG" alt="pres" style="display: block; margin: 0 auto; width:50%; height:auto;">
         <br>
 
         <!-- SYSTEM ARCHITECTURE TABLE -->
